--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,17 @@
 html,body{
   width: 100%;
   height: 100%;
+  overflow: hidden;
   margin: 0;
-  padding: 0;
+  padding: 50px 0 0;
   border: 0;
+  background: #f1f1f1;
 }
 .title{
+  color: #666;
   font-size: 24px;
   text-align: center;
+  margin-bottom: 40px;
 }
 
 
@@ -16,11 +20,15 @@ html,body{
   display: block;
   width: 90px;
   height: 90px;
-  margin: 0 auto;
+  margin: 0 auto 10px;
   border-radius: 45px;
 }
 
 .user{
-  font-size: 14px;
+  font-size: 18px;
+  font-weight: normal;
   text-align: center;
+  color: #aaa;
+  padding: 0;
+  margin: 0;
 }
